--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -43,5 +43,6 @@
         android:layout_alignLeft="@+id/editText"
         android:layout_alignStart="@+id/editText"
         android:layout_marginTop="19dp"
-        android:id="@+id/button" />
+        android:id="@+id/button"
+        android:onClick="onSave" />
 </RelativeLayout>
