- Added a DatePickerFragment to allow for setting/editing due dates

--- a/app/src/main/res/layout/todoitem.xml
+++ b/app/src/main/res/layout/todoitem.xml
@@ -6,12 +6,18 @@
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/tvDueDate"
+        android:text="Name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_alignParentLeft="true"
-        android:text="Name" />
+        android:layout_alignParentStart="true"
+        android:textSize="18sp" />
     <TextView
         android:id="@+id/tvDueDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DueDate"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="18sp" />
 </RelativeLayout>
