--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -39,10 +39,23 @@
         android:text="Save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="89dp"
+        android:id="@+id/button"
+        android:onClick="onSave"
         android:layout_below="@+id/editText"
         android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
-        android:layout_marginTop="19dp"
-        android:id="@+id/button"
-        android:onClick="onSave" />
+        android:layout_alignStart="@+id/editText" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button"
+        android:layout_marginTop="37dp"
+        android:id="@+id/tvEditDate"
+        android:onClick="showDatePickerDialog"
+        android:textSize="20sp" />
+
 </RelativeLayout>
