--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -10,16 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="test.codepath.aaneja.simpletodo.MainActivity">
 
-    <Button
-        android:text="Add Item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnAddItem"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="onAddItem" />
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,18 +20,13 @@
         android:layout_above="@+id/btnAddItem"
         android:id="@+id/lvItems" />
 
-    <EditText
+    <Button
+        android:text="Add Item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text=""
-        android:ems="10"
-        android:id="@+id/etNewItem"
+        android:id="@+id/btnAddItem"
+        android:onClick="onAddItem"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/btnAddItem"
-        android:layout_toStartOf="@+id/btnAddItem"
-        android:hint="Enter a new item" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
