--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="59dp"
         android:id="@+id/editText"
+        android:maxLength="100"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -45,7 +46,7 @@
         android:id="@+id/tvEditDate"
         android:onClick="showDatePickerDialog"
         android:textSize="20sp"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/colorAccent"
         android:layout_below="@+id/editText"
         android:layout_toRightOf="@+id/button"
         android:layout_toEndOf="@+id/button"
