- Moar view improvements!

--- a/app/src/main/res/layout/todoitem.xml
+++ b/app/src/main/res/layout/todoitem.xml
@@ -12,7 +12,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        android:layout_margin="@dimen/cardview_default_radius">
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
