--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/btnAddItem"
+        android:dividerHeight="0dp"
+        android:divider="@null"
         android:id="@+id/lvItems" />
 
     <Button
